# fire

./: 01 compound interest.ipynb  03 three fund portfolio.ipynb  Basic_Portfolio_Analysis.ipynb  pandas.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: 01 compound interest-checkpoint.ipynb
Visualization/: Financial_Independence_(FI)_Goals_and_Net_Worth_Visualization.ipynb
