[tool.poetry]
name = "ls"
version = "0.1.0"
description = "financial independence"
authors = ["Rakesh Singh <kumar.rakesh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
jupyter = "^1.0.0"
notebook = "^7.2.0"
yfinance = "^0.2.40"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
